fix: adjust tiles styling on small devices

--- a/blocks/tiles/tiles.css
+++ b/blocks/tiles/tiles.css
@@ -35,7 +35,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    margin: 1rem;
+    margin: 1rem 0;
 }
 
 .tile .img-container {
@@ -61,9 +61,8 @@
     --bg-color: inherit;
 
     background-color: var(--bg-color);
-    margin-top: 5px;
+    margin: .5rem 0;
     color: var(--color-purple);
-    margin-bottom: 10px;
     padding-left: 0;
     padding-right: 0;
     line-height: 1.2rem;
@@ -100,7 +99,7 @@
 }
 
 .tile.tile-0 .img-container {
-    height: auto;
+    height: 100%;
 }
 
 .tile.tile-0 .img-container .img-padding {
@@ -160,19 +159,13 @@
     line-height: 1.4;
 }
 
-@media (min-width: 360px) {
-    .tile.tile-0 .tile-contents{
-        padding: 1.5rem 2rem 1rem;
-    }
-
-    .tile.tile-0 .tile-contents h3 {
-        font-size: 1.5rem;
-    }
-}
-
-@media screen and (min-width: 461px) {
+@media (min-width: 400px) {
     .tile {
         flex-direction: unset;
+    }
+
+    .tile .category-link-btn {
+        margin-top: 0;
     }
 
     .tile .tile-contents {
@@ -182,6 +175,14 @@
     .tile .tile-contents h3 {
         font-size: 1.25rem;
         line-height: 1.1;
+    }
+
+    .tile.tile-0 .tile-contents {
+        padding: 1.5rem 2rem 1rem;
+    }
+
+    .tile.tile-0 .tile-contents h3 {
+        font-size: 1.5rem;
     }
 }
 
@@ -215,6 +216,11 @@
     .tiles-block-container {
         display: flex;
         justify-content: space-between;
+        gap: 1.5rem;
+    }
+
+    .tile {
+        margin: 0;
     }
 
     .tile.tile-0 {
@@ -227,6 +233,7 @@
         flex-direction: column;
         justify-content: space-between;
         width: 41.6667%;
+        gap: 1.5rem;
     }
 
     .small-tiles-wrapper .category-link-btn {
